react-app/src/components/Splash/splash.css
#splash-logged-in-header{
  position: absolute;
  top: 10px;
  left: 27%;
  margin-top: 0;
}

#chirp-user-container{
  display: flex;
}

#chirp-user{
  font-weight: bold;
}

#chirp-user:hover{
  text-decoration: underline;
}


#chirp-user-image{
  height: 50px;
  width: 50px;
  border-radius: 50%;
  margin-right: 5px;
}



#main-chirp-content:hover{
  background-color: #f1f4f5;
}

#each-chirp-container{
  width: 100%;
  height: fit-content;
  font-size: 14px;
  border-bottom: 1px solid #f1f4f5;
  padding: 20px;
  padding-top: 5px;
  overflow-wrap: break-word;
  box-sizing: border-box;
}

/* #each-chirp-container:hover{
  background-color: #f1f4f5;
} */

#all-chirps-container{
  display: flex;
  flex-direction: column;
  width: 39.5%;
  position: absolute;
  top: 29%;
  left: 26.5%;
  overflow-wrap: normal;
  border-left: 1px solid #f1f4f5;
  border-right: 1px solid #f1f4f5;
}

#splash-chirp-input{
  align-self: flex-start;
  display: block;
  width: 90%;
  font-family: Arial, Helvetica, sans-serif;
  resize: none;
  padding: 0%;
  border: none;
  margin-bottom: 10px;
  margin-left: 3%;
  margin-top: 1%;
  height: 65%;
  overflow-y:auto;
}

#splash-chirp-input:focus{
  outline: none;
}

#chirp-body{
  position: relative;
  bottom: 15px;
  max-width: 80%;
  margin-left: 16%;
  margin-top: 1%;
  margin-bottom: 3%;
}

#chirp-media{
  max-height: 300px;
  max-width: 70%;
  margin-bottom: 3%;
  margin-left: 16%;
  border-radius: 12px;
}


#chirp-counter{
 position: absolute;
 bottom: 5px;
 right:100px;
 margin-bottom: 0;
}

#chirp-counter-zero{
 position: absolute;
 bottom: 5px;
 right:100px;
 margin-bottom: 0;
 color: red;
}

#chirp-counter-close-to-limit{
  position: absolute;
 bottom: 5px;
 right:100px;
 margin-bottom: 0;
 color: orange;
}

#chirp-counter-over-limit{
  position: absolute;
 bottom: 5px;
 right:100px;
 margin-bottom: 0;
 color: red;
}

#chirp-input-button-contatiner{
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  width: 100%;
}

#add-chirp-form{
  display: flex;
  justify-content: space-between;
  position: absolute;
  top: 50px;
  left: 26.5%;
  width: 39.5%;
  height: 22%;
  border-left: 1px solid #f1f4f5;
  border-right: 1px solid #f1f4f5;
  border-bottom: 1px solid #f1f4f5;
  padding: 10px;
  box-sizing: border-box;
}

#add-chirp-button{
  width: 72px;
  height: 34px;
  border: none;
  border-radius: 20px;
  background-color: #1d9bf0;
  color: white;
  font-weight: bold;
  position: absolute;
  right: 5px;
  bottom: 5px;
}

#add-chirp-button-disabled{
  width: 72px;
  height: 34px;
  border: none;
  border-radius: 20px;
  background-color: #8ecdf7;
  color: white;
  font-weight: bold;
  position: absolute;
  right: 5px;
  bottom: 5px;
}



#add-chirp-profile-pic{
  height: 50px;
  width: 50px;
  border-radius: 50%;
  margin-right: 5px;
}

#delete-chirp-button{
  width: 72px;
  height: 34px;
  border: none;
  border-radius: 20px;
  background-color: #1d9bf0;
  color: white;
  font-weight: bold;
}

#splash-graffiti-logo{
  width: 55%;
  height: 100vh;
  margin: 0;
  padding: 0;
}

#white-bird-logo{
  position: absolute;
  height: 400px;
  width: 400px;
  left: 16%;
  top: 30%;
}

#user-auth-side{
  width: 42%;
  height: 800px;
  position: absolute;
  right:0;
  top:0;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;

}

#user-auth-home-logo{
  height: 40px;
  width: 40px;
}

#sign-up-demo-container{
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  height: 30%;
  width: 50%;
}

#whats-chirpin-container{
  margin-top: 15px;
}

#what-chirpin{
  font-size: x-large;
  font-family: 'Lobster', cursive;
}

#tell-the-world{
  font-size:x-large;
  font-family: 'Lobster', cursive;
  margin-bottom: 10px;
}

#user-auth-section-headers{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#chipper-main-logo{
  font-size: 60px;
  font-family: Arial, Helvetica, sans-serif;
  font-weight:900;
}

#signup-button{
  width: 100%;
  height: 34px;
  border: 2px solid #eeeeee;
  background-color: white;
  border-radius: 20px;
  transition-duration: .2s;
}

#signup-button:hover{
  background-color: #eeeeee;
  border: 2px solid #dcdcdc;
}

#signup-demo-sep{
  text-align: center;
  font-family: 'Lobster', cursive;
  font-size: larger;
}

#demo-button{
  width: 100%;
  height: 34px;
  border: 2px solid #eeeeee;
  background-color: #269ff0;
  color: white;
  font-weight: bold;
  border-radius: 20px;
  transition-duration: .2s;
}

#demo-button:hover{
  background-color: #1A8CD8;
}

#login-section{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 50%;
}

#login-button{
  width: 100%;
  height: 34px;
  border: 2px solid #eeeeee;
  background-color: white;
  color: #269ff0;
  font-weight: bold;
  border-radius: 20px;
  transition-duration: .2s;
}

#login-button:hover{
  background-color: #E8F5FD;
}

#add-chirp-media-button{
  height: 20px;
  width: 20px;
  border-radius: 15%;
  transition-delay: 1s;
}

#add-media-button-container{
  position: absolute;
  bottom: 5px;
  left: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 35px;
  width: 35px;
  border-radius: 50%;
}

#add-media-button-container:hover{
  background-color:#eeeeee;
}

#image-to-upload{
  position: absolute;
  bottom: 40px;
  left: 20px;
  font-size:x-small;
  color:#1A8CD8
}

#img-upload-spinner{
  height: 30px;
  width:30px;
  position: absolute;
  bottom: 5px;
  left: 80px;
}

